--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,10 @@
 
   <link rel="icon" href="/favicon.ico" />
   <title>React.js Boilerplate</title>
+  <link
+    href="https://fonts.googleapis.com/css?family=Lato:300,400&display=swap"
+    rel="stylesheet"
+  />
 </head>
 
 <body>
