--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,7 @@
 
   <link rel="icon" href="/favicon.ico" />
   <title>React.js Boilerplate</title>
-  <link
-    href="https://fonts.googleapis.com/css?family=Lato:300,400&display=swap"
-    rel="stylesheet"
-  />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 </head>
 
 <body>
